[package]
name = "jumpstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
uefi = { version = "0.27.0", features = ["alloc", "global_allocator"] }
uefi-services = "0.24.0"
anyhow = { version = "1.0.80", default-features = false }
regex = { version = "1.10.3", default-features = false }
